# medicine_ordering_system

./: codes.txt  update mysql in xampp using mariadb.txt  vswhere.txt
medicine_ordering_system/: EVALUATION_METRICS_SUMMARY.md  ORDER_STATUS_MANAGEMENT_IMPLEMENTATION.md  check_database.py  db.sqlite3  generate_current_users.py  generate_historical_data_sql.py  generate_matching_users.py  generate_medicines.py  generate_metformin_final.py  generate_metformin_simple.py  generate_paracetamol_data.py  generate_production_data.py  generate_users.py  generate_vitamin_c_data.py  gpt_generate_data.py  requirement.txt  requirements.txt  test_all_forecasts.py  test_nan_handling.py  test_weekly_forecast.py  verify_current_users.py  verify_data.py  verify_medicines.py  verify_users.py
medicine_ordering_system/analytics/: api_views.py  services.py  urls.py  views.py
medicine_ordering_system/common/: urls.py  views.py
medicine_ordering_system/inventory/: views.py
medicine_ordering_system/medicine_ordering_system/: settings.py  urls.py  views.py
medicine_ordering_system/oncare_admin/: views.py
medicine_ordering_system/pmdarima-2.0.4/: PKG-INFO  setup.cfg
medicine_ordering_system/pmdarima-2.0.4/pmdarima.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
medicine_ordering_system/pmdarima-2.0.4/pmdarima/__check_build/: _check_build.c
medicine_ordering_system/pmdarima-2.0.4/pmdarima/arima/: _arima.c
medicine_ordering_system/pmdarima-2.0.4/pmdarima/preprocessing/exog/: _fourier.c
medicine_ordering_system/pmdarima-2.0.4/pmdarima/utils/: _array.c
(+30 files in other folders)
