[aliases]
test = pytest

[tool:pytest]
filterwarnings = 
	ignore::UserWarning
	
	ignore::statsmodels.tools.sm_exceptions.HessianInversionWarning
	
	ignore:fft=True
	
	ignore:tostring.*is deprecated
	
	ignore:Using or importing the ABCs

[metadata]
description-file = README.md

[egg_info]
tag_build = 
tag_date = 0

